--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "telegram_sticker_batch_resizer"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["CatMe0w <catme0w@live.cn>"]
 edition = "2018"
 
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 image = "0.23.14"
+indicatif = "0.16.1"
 
 [profile.release]
 panic = 'abort'
